Removed logger from server. Fixed menu styling No overflow on merchant edit

--- a/webapp/src/app/components/home/home.component.scss
+++ b/webapp/src/app/components/home/home.component.scss
@@ -30,7 +30,7 @@ $nav-menu-line-height: 60px;
     height: 100%;
     overflow-x: hidden;
     background-color: $nav-background-color;
-    overflow-y: scroll;
+    overflow-y: hidden;
     .menu-body {
         width: 100%;
         float: left;
@@ -38,7 +38,7 @@ $nav-menu-line-height: 60px;
         padding-top: 160px;
         padding-bottom: 60px;
         height: 100%;
-        overflow: scroll;
+        overflow: hidden;
         @include no-select;
         .toggle-btn {
             display: none;
@@ -257,7 +257,7 @@ $nav-menu-line-height: 60px;
     #main {
         position: absolute;
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: hidden;
         top: 70px;
         right: 0;
         bottom: 0;
